force-app/main/default/objects/fw1__Credit_Memo__c/fw1__Credit_Memo__c.object-meta.xml
<CustomObject>
    <label>Credit Memo</label>
    <nameField>
        <displayFormat>CM-{0000000000}</displayFormat>
        <label>Credit Memo Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Memos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>