force-app/main/default/objects/fw1__Credit_Memo__c/fields/Account_Quickbooks_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Quickbooks_ID__c</fullName>
    <formula>IF( fw1__Entity__r.Name = &quot;SCS Global&quot;, fw1__Account__r.Quickbooks_ID__c,
IF( fw1__Entity__r.Name = &quot;SCS Consulting&quot;, fw1__Account__r.QBConsulting_ID__c,
IF( fw1__Entity__r.Name = &quot;Ivory Coast&quot;, fw1__Account__r.QBIvory_ID__c, &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Quickbooks ID</label>
    <type>Text</type>
</CustomField>