force-app/main/default/objects/fw1__Credit_Memo__c/fields/Bad_Debt__c.field-meta.xml
<CustomField>
    <fullName>Bad_Debt__c</fullName>
    <description>This field use in Quickbooks Integration</description>
    <label>Bad Debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>