force-app/main/default/objects/fw1__Credit_Memo__c/fields/Bank_Charges__c.field-meta.xml
<CustomField>
    <fullName>Bank_Charges__c</fullName>
    <description>This field use in Quickbooks Integration</description>
    <label>Bank Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>