force-app/main/default/objects/fw1__Credit_Memo__c/fields/DMS_inv_num__c.field-meta.xml
<CustomField>
    <fullName>DMS_inv_num__c</fullName>
    <label>DMS inv num</label>
    <length>30</length>
    <type>Text</type>
</CustomField>