force-app/main/default/objects/fw1__Credit_Memo__c/fields/DMS_qb_balancedue__c.field-meta.xml
<CustomField>
    <fullName>DMS_qb_balancedue__c</fullName>
    <label>DMS qb balancedue</label>
    <length>20</length>
    <type>Text</type>
</CustomField>