force-app/main/default/objects/fw1__Credit_Memo__c/fields/DMS_wo_inv_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_wo_inv_Id__c</fullName>
    <label>DMS wo inv Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>