force-app/main/default/objects/fw1__Credit_Memo__c/fields/Foreign_Currency_Exchange_Loss__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Currency_Exchange_Loss__c</fullName>
    <description>This field use in Quickbooks Integration</description>
    <label>Foreign Currency Exchange Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>