force-app/main/default/objects/fw1__Credit_Memo__c/fields/fw1__Account__c.field-meta.xml
<CustomField>
    <fullName>fw1__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>