force-app/main/default/objects/fw1__Credit_Memo__c/fields/fw1__Auto_Apply_On_Recurring_Invoices__c.field-meta.xml
<CustomField>
    <fullName>fw1__Auto_Apply_On_Recurring_Invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Apply On Recurring Invoices</label>
    <type>Checkbox</type>
</CustomField>