force-app/main/default/objects/fw1__Credit_Memo__c/fields/fw1__Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>fw1__Billing_Street__c</fullName>
    <label>Billing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>