force-app/main/default/objects/fw1__Credit_Memo__c/fields/fw1__Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date</label>
    <type>Date</type>
</CustomField>