force-app/main/default/objects/fw1__Credit_Memo__c/fields/fw1__Description__c.field-meta.xml
<CustomField>
    <fullName>fw1__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>