force-app/main/default/objects/fw1__Credit_Memo__c/fields/fw1__Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>fw1__Email_Subject__c</fullName>
    <label>Email Subject</label>
    <type>TextArea</type>
</CustomField>