force-app/main/default/objects/fw1__Credit_Memo__c/fields/fw1__Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Net_Amount__c</fullName>
    <formula>fw1__Total_Lines_Amount__c - fw1__Total_Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>