force-app/main/default/objects/fw1__Credit_Memo__c/fields/fw1__Reason__c.field-meta.xml
<CustomField>
    <fullName>fw1__Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Write Off Bad Debt</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Overpayment</fullName>
            </value>
            <value>
                <fullName>Invoice Error</fullName>
            </value>
            <value>
                <fullName>Advance Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>