force-app/main/default/objects/fw1__Credit_Memo__c/fields/fw1__Remaining_Credit__c.field-meta.xml
<CustomField>
    <fullName>fw1__Remaining_Credit__c</fullName>
    <formula>fw1__Total_Credit_Amount__c  -  fw1__Total_Allocated_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>