force-app/main/default/objects/fw1__Credit_Memo__c/fields/fw1__Revolving_Balance__c.field-meta.xml
<CustomField>
    <fullName>fw1__Revolving_Balance__c</fullName>
    <label>Revolving Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>