force-app/main/default/objects/fw1__Credit_Memo__c/fields/fw1__Total_Allocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Allocated_Amount__c</fullName>
    <label>Total Used Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>