force-app/main/default/objects/fw1__Credit_Memo__c/fields/fw1__Total_Lines_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Lines_Amount__c</fullName>
    <label>Total Lines Amount</label>
    <summarizedField>fw1__Credit_Memo_Line__c.fw1__Amount__c</summarizedField>
    <summaryForeignKey>fw1__Credit_Memo_Line__c.fw1__Credit_Memo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>