force-app/main/default/objects/fw1__Credit_Memo__c/fields/fw1__Total_Non_Installment__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Non_Installment__c</fullName>
    <label>Total Non-Installment</label>
    <summarizedField>fw1__Credit_Memo_Line__c.fw1__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>fw1__Credit_Memo_Line__c.fw1__Non_Installment__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>fw1__Credit_Memo_Line__c.fw1__Credit_Memo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>