force-app/main/default/objects/fw1__Credit_Memo__c/fields/Invoice_Quickbooks_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Quickbooks_ID__c</fullName>
    <formula>fw1__Generated_From__r.Quickbooks_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Quickbooks ID</label>
    <type>Text</type>
</CustomField>