force-app/main/default/objects/fw1__Credit_Memo__c/fields/Program_Nest_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_Nest_Unit_ID__c</fullName>
    <formula>IF(
ISBLANK(fw1__Generated_From__r.Program_Nest_Unit_ID__c),
fw1__Generated_From__r.Bundle_Nest_Unit_ID__c,
fw1__Generated_From__r.Program_Nest_Unit_ID__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Nest Unit ID</label>
    <type>Text</type>
</CustomField>