force-app/main/default/objects/fw1__Credit_Memo__c/fields/Program_QB_Class_Id__c.field-meta.xml
<CustomField>
    <fullName>Program_QB_Class_Id__c</fullName>
    <formula>IF(
  ISBLANK(fw1__Generated_From__r.Program_QB_Class_Id__c),
  fw1__Generated_From__r.Bundle_QB_Class_Id__c,
  fw1__Generated_From__r.Program_QB_Class_Id__c
)</formula>
    <label>Program QB Class Id</label>
    <type>Text</type>
</CustomField>