force-app/main/default/objects/fw1__Credit_Memo__c/fields/Resync__c.field-meta.xml
<CustomField>
    <fullName>Resync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resync</label>
    <type>Checkbox</type>
</CustomField>