force-app/main/default/objects/fw1__Credit_Memo__c/fields/REVENUE_Other_Revenue__c.field-meta.xml
<CustomField>
    <fullName>REVENUE_Other_Revenue__c</fullName>
    <description>This field use in Quickbooks Integration</description>
    <label>REVENUE:Other Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>