force-app/main/default/objects/fw1__Credit_Memo__c/fields/SCS_Total_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>SCS_Total_Credit_Amount__c</fullName>
    <description>Use in Quickbooks Integration</description>
    <formula>(Bad_Debt__c + Bank_Charges__c + Foreign_Currency_Exchange_Loss__c + REVENUE_Other_Revenue__c + TAXES_Foreign_Taxes__c )</formula>
    <label>SCS Total Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>