force-app/main/default/objects/fw1__Credit_Memo__c/fields/TAXES_Foreign_Taxes__c.field-meta.xml
<CustomField>
    <fullName>TAXES_Foreign_Taxes__c</fullName>
    <description>Use in Quickbooks Integration</description>
    <label>TAXES:Foreign Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>