force-app/main/default/objects/fw1__Credit_Memo__c/listViews/fw1__All.listView-meta.xml
<ListView>
    <fullName>fw1__All</fullName>
    <columns>NAME</columns>
    <columns>fw1__Account__c</columns>
    <columns>fw1__Date__c</columns>
    <columns>fw1__Reason__c</columns>
    <columns>fw1__Total_Credit_Amount__c</columns>
    <columns>fw1__Remaining_Credit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>